# actix-web-infra-demo

./: Cargo.toml  README.md  test.db
migrations/2024-12-02-042131_create_users/: up.sql
migrations/2024-12-02-060749_create_user_providers/: down.sql  up.sql
src/: app_config.rs  db.rs  main.rs  schema.rs
src/api/: mod.rs
src/api/auth/: github.rs  mod.rs
src/models/: mod.rs  user.rs  user_provider.rs
